@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST uutf-0.9.3.tbz 31734 SHA256 1f364f89b1179e5182a4d3ad8975f57389d45548735d19054845e06a27107877 SHA512 6fa3592bcb401eb96ffe7d4112ae89a72f0088a3909e087ba04d22544bab0521fadee536b4c01efac040435ffc5f2681567d2291beb90db5c2e56deb4b22c2d6 WHIRLPOOL fbb3500f8a58d6a5f4f8b43e6545b53317995b6de2aee51f688fd6d42b5eaab0d56426e567024a625ec2774603559182e7e54bbd6f1da5c2a69f80cf8f2a5f7e
 DIST uutf-0.9.4.tbz 36987 SHA256 13706722a0037b167eef359bac68d5426d05f64aa308f44c1784aace9577e1b8 SHA512 95203b06e7506f33822f10607315920b849efde3ed2e032bf8dd805f99ce4851b375bc92a1f95403673c97c6176c5a6974af2be611f530db0a7f36296948edf4 WHIRLPOOL a3446da14f665c06dbc9b245baf530c4650fb657baec02de7773cbb5addb2fdb5ddf9a98822a3af3b72b4800affcf2af39e44a6f37f17d221c55bd02b39c4cce
-EBUILD uutf-0.9.3.ebuild 1219 SHA256 4ca958ec4a7193984666dcae58e10927e8d56e28cab4495391457d9a75934483 SHA512 8eb9bb258129f27e5f0757614422f0564594f1364fb331ad4ea9ac069ec6f27a49fd38485f98f85d83ea291c3e103da60406b0769b051f7ac011cf336bd69b85 WHIRLPOOL bc6a9c387fca61ba67140c8cea707c7d734c12bb79cf63ede8216686bfc57caecbb75cf79fa98e597cb7ed2ad488784562a19547b907555de3ea48a1f36d2a84
-EBUILD uutf-0.9.4.ebuild 1400 SHA256 c248c85c6efabdf84dff3748b4f0a4606c1ffd5c14efc67c5dd495f4d6eada7d SHA512 212211dd0ff7d0868ad82c73d1b9616b624da5081251d0cedd8198713eb4fd1510c7fb8189a9c3afaf42ac5dad4803af726dac8f88e6e1c7432c0f4ec3e2f8cb WHIRLPOOL 681e977afa01a324d22f2bf8ad75504d3b29f4368102e056477945f791400c3047c46b428fd50ea579150b0ff0d749eb73b214513cc729cc6f92e3d60285a783
-MISC ChangeLog 640 SHA256 bdadfd3df048cf589605dfa591952a16e6b1fb3656997d3c07d64bf9b426e4f2 SHA512 93d6be6b69b05a92c8a75fd48a966201ea7ec08001f43fda64616c92cb08f59df7e8c0e1500b249896815bb86201e4483276fdca658cb27d4369667f695a1c83 WHIRLPOOL efd59d7cb3b695cfed15880638024be4f1b50e0d0b30fbe3f1f76545dec617891ce5954908626214adda335546c0dd8dd6118c6629405e519aeb9750cfacb786
+EBUILD uutf-0.9.4.ebuild 1432 SHA256 393c3a0351cb54d95bed1fc17e2d38313999bffc6c7d627d8dace9e5217fda47 SHA512 f2d9f5f387f3bf05673d613bb62fe9b5c86370a753e36349034f9a31695deb04a579e26b10040e0b2222a88221bf3d61b357f150ccb4a3e78baafa874559b0ba WHIRLPOOL db59ad051b888870c181cb90274c60f7e2cb8b5f4cade16f233d0c33be53155d104fe7419a70d6a0aadd2b8e544b715ac9a9a3306b846e476f755a8e9530d619
+MISC ChangeLog 869 SHA256 39496817a31597e3715feffc0b0c8f7bf2eedcdc04b871485425161f0c080b13 SHA512 cac5e1e3c5c23c7756e703cdde7988b693cb29a1ad1d685bcbc6db8682d616e116bb8d35025973e0a3caac619624242264d72cdbe66a340c85485aa778af837e WHIRLPOOL b40b5a471c778aab3a7372f92a4b5e42ff637667b847dd34032d4c3e739a6d87a0003508b41d0e50130a11160b920e1a13053167d673570d9f6ff6392a853750
 MISC metadata.xml 309 SHA256 100cc060fc5e0fde6d55c1c1357d6183639887a8740830242f67606723c1e1f4 SHA512 48d3e981b9d6e1231e00b6fc848fed0ac60d90d6ee125c71b98171f410ae46ef478f416e9670b69e74d943d2a51d4387670c0e798825e39ae94fbad2dc8593d7 WHIRLPOOL cf7077a7b006835491fae6a9249167999e2992ad98283fc64ed5772216177d1b06e156d1c35a9bb2475ee2f35b5f6db1a43e519163261495932b467b5df13d16
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlTGSK8ACgkQvFcC4BYPU0q0kACghklKbsBZqh81Rsg7XxUQSvUc
-MHYAoJnochbrDcVh+q+OqKCHvzv6AiJ5
-=4fZg
+iEYEAREIAAYFAlUc/x8ACgkQvFcC4BYPU0o7ogCggm5xO9KdVXULdUkb7+VfIDz/
+zdUAn20uWjXbGG6CxCeq3MAF8RXb5RmM
+=RxuR
 -----END PGP SIGNATURE-----
