@@ -1,0 +1,26 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
+DIST django-formtools-1.0.tar.gz 70505 SHA256 647a5855277dcf335902eeeeeba3056e439493e6b7de70b942c988a6d8d70e04 SHA512 828ea5f5057d7ec72ab6cc6613e8af950f16595115bba658892e15aec39498f6e7c3dcb5c50ac4fc7ef54e12a640ed93e76a968f41bec59388630cdc43c9e3ce WHIRLPOOL ef8371e2e41b52b7c58fae2a5c58eef63354fddeeeaa2eb7808df45d003998a955842cf395cb07ce8cb7ea003b01f16b5834c2441ebf8548cd5e21d4ee0f2797
+EBUILD django-formtools-1.0.ebuild 771 SHA256 cb811ceb447c5951164e75c3d46d1a83f1cbc44cd954361beba6aa2fa19e58ae SHA512 5a090272c3e1be3dd24ca9cb22dc47c70ec82918447ee789c2dcdad325501575e129bcfda11b7387caeb76fd1e085a49bee6484d59c19c0ddd14fbd9bc75ad20 WHIRLPOOL bb3a682847494073e5ed6aa4fb9a38b78dffeb1fd4556f11e61b3fbe2a72ddf5506bc7e698419e5eb11ed0a58c2ad159807f118072c237d3faed067d92865d2c
+MISC ChangeLog 384 SHA256 afb343f80799ff007fdaa2f4fdc3a2dbb59c982fcdd6ae4538a40d9319b8f785 SHA512 ea7dab5634b07fc75cefaa05fb402c8199ee7949ce51cc3b0daddae1c87715ed279478ea9009dfd827a4881efee986fa4c7958752997d9d116229293141bb997 WHIRLPOOL fa1edca53542aad716ac1122ac2a5c23174050b8267467dd73e412f29646d7a14f2265abcd4971f61cca6365f366621ee9c22af5493e587a326de9541b5d2194
+MISC metadata.xml 258 SHA256 f9120561eb5a0eb0be48e47772750941e1a206da5fda56321b45eb76fd145ba7 SHA512 adbf77e7b9f35851720e2f9ef564420d0d128c19fd2a72cd4c9f25e0261419d46c1f72c45fc7093a00eb15e551a14742f969157fb3356f8a60b3d31dee38c8c2 WHIRLPOOL 7811fe6099018241061d288dcc1333c7bad35703bb201f921041c7faeeacb03faf748f1d34699afe4e21b1a3f95149fafbbb18633548dfd344fbb736a3ddf495
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJ8BAEBCgBmBQJVHQLYXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVir6mAQAIVHuxXM1WNwsGfCPY/bgOPR
+axRTPWm7V8Ja6suuSwcviJC3B3SbDRZmQGLoXqTjjRk2V+ZntLR3ma9KrJZwkBAF
+Gyy413O31h3wzTEnflhLUVHS0gir5vPoxDTrKJE/c0WaoCqHWoCXozG+svUnJ9RH
+2nOlAScLg2/A2WlCjFnCTCMqiWcmE0E6zEYyjh/ZUu1qteGYigDQd48QdcJ5ZQQG
+dS9A67gY5DqKz7EWmZ2mchGKWDhmI40r7BMwO6rHDXKMHOHkfPF/3HsUfxC4sTW4
+FSW5sdvXrLSmriYjZ2jZuiYpv3WkRJLrUFtWYQLOnOlrZERtwrVTPd8fkPrUJGSc
+bGj8PZwwy13taETXvfiKhBkGI9wjinG8MOz1l7kjbNd8XxEUsHAvy53dr20AxT/w
+HIYmphFvTzsglVrAqtPjGMYY46ic/z76EM8XrHoI2e6AvCV9tF+M4RVspMg97wr0
+FCBbUVnFVm0CzzybShFyitqKRqqj8fWemOypFI4Yq1W3WVEyYy5KoS0gMKIRxDsc
+8HIRfsUFtlE33gppsgxuFqKuEEK+NTJJo9z71EtUfacEsvnA3HvBCnlMrqm4d7Mm
+6GK/Nxm0seipqc6a3jOO9uR5gIpCWhoerCjfUJvPYagjo2chdb5GTlgfatzk5A/l
+rDlR9zQ6gWi/Kc1L8jO8
+=BTA4
+-----END PGP SIGNATURE-----
