@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile install test
-DEPEND=>=dev-lang/ocaml-3.12:=[ocamlopt?] >=dev-ml/findlib-1.0.4-r1
-DESCRIPTION=Non-blocking streaming Unicode codec for OCaml
-EAPI=5
-HOMEPAGE=http://erratique.ch/software/uutf
-IUSE=+ocamlopt doc
-KEYWORDS=~amd64
-LICENSE=BSD
-RDEPEND=>=dev-lang/ocaml-3.12:=[ocamlopt?]
-SLOT=0/0.9.3
-SRC_URI=http://erratique.ch/software/uutf/releases/uutf-0.9.3.tbz
-_eclasses_=findlib	9cf6020ee5481f39f1aa566a323f9868
-_md5_=8fe40dc2ee423ee72a26e802994814f5
