@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile install test
-DEPEND=>=dev-lang/ocaml-3.12:=[ocamlopt?] utftrip? ( dev-ml/cmdliner:= ) >=dev-ml/findlib-1.0.4-r1
+DEPEND=>=dev-lang/ocaml-3.12:=[ocamlopt?] utftrip? ( dev-ml/cmdliner:= ) test? ( dev-ml/cmdliner ) >=dev-ml/findlib-1.0.4-r1
 DESCRIPTION=Non-blocking streaming Unicode codec for OCaml
 EAPI=5
 HOMEPAGE=http://erratique.ch/software/uutf
-IUSE=utftrip +ocamlopt doc
+IUSE=doc utftrip +ocamlopt test
 KEYWORDS=~amd64
 LICENSE=BSD
 RDEPEND=>=dev-lang/ocaml-3.12:=[ocamlopt?] utftrip? ( dev-ml/cmdliner:= )
 SLOT=0/0.9.4
 SRC_URI=http://erratique.ch/software/uutf/releases/uutf-0.9.4.tbz
 _eclasses_=findlib	9cf6020ee5481f39f1aa566a323f9868
-_md5_=f9b9a7fb440a81232b281825628a2ad5
+_md5_=82aed12bd5f52ee292d0524a4d895de0
