@@ -1,6 +1,12 @@
 # ChangeLog for dev-ml/uutf
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/uutf/ChangeLog,v 1.3 2015/01/26 14:01:18 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/uutf/ChangeLog,v 1.5 2015/04/02 08:34:38 aballier Exp $
+
+  02 Apr 2015; Alexis Ballier <aballier@gentoo.org> uutf-0.9.4.ebuild:
+  add missing cmdliner dep for tests, by Andreas Schürch, bug #527318
+
+  02 Apr 2015; Alexis Ballier <aballier@gentoo.org> -uutf-0.9.3.ebuild:
+  remove old
 
   26 Jan 2015; Alexis Ballier <aballier@gentoo.org> uutf-0.9.4.ebuild:
   fix tests with upstream help
